# rust-weather-cli

./: LICENSE  README.md
rust-weather-cli/: Cargo.toml
rust-weather-cli/src/: location.rs  main.rs  weather.rs
