[package]
name = "rust-weather-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.4.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.11.10"
crossterm = { version = "0.23.2", features = [ "serde" ] }
tui = { version = "0.18.0", default-features = false, features = ['crossterm', 'serde'] }
lazy_static = "1.4.0"